일단은 내용을 넣어봄. 생각중

--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
-<!DOCTYPE HTML>
-<!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
+
+<!DOCTYPE html>
 	<head>
 		<title>Strata by HTML5 UP</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
@@ -17,7 +12,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="main" /></a>
-					<h1><strong>Kim입니다</strong></h1>
+					<h1><strong>Anonymous Kim</strong></h1>
 				</div>
 			</header>
 
@@ -27,54 +22,88 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>주식 개발자, <br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>
+                                데이터 분석과 시각화에 관심 있는 주식 개발자<br>
+                                킴입니다.</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>
+                            저는 차트 분석과 매매를 좋아합니다.
+                            차트 분석과 실시간 데이터에 기반한 사용자 친화적인 UI/UX에 관심이 있습니다.
+                        </p>
+                            
 					</section>
 
-				<!-- Two -->
+                    <section id="three">
+						<h2>좋아하는 것</h2>
+                        <div>
+                            <article>
+                                <p>고양이</p>
+                                <p>회색빛의 고양이를 키우고 있음. 이름은 뭐고, 특기는 소파 가운데에서 잠자는것입니다.</p>
+                            </article>
+                        </div>
+					</section>
+
+                    <section id="three">
+						<h2>최근 관심사</h2>
+                        <ul>
+                            <li>
+                                <p>선물과 주식간의 상관관계 연구</p>
+                                <p>선물의 영향에 따라 실제 주식에서는 어떻게 반응하고 대응해야할 것인지 궁금증을 가지게 되었습니다.</p>
+                            </li>
+                            <li>
+                                <p>데이터의 백테스트</p>
+                                <p>과거의 데이터를 통해서 여러 예측들을 해보는 것에 관심이 있습니다.</p>
+                            </li>
+                        </ul>
+					</section>
+                    
+                    <section id="three">
+						<h2>해보고 싶은 것</h2>
+                        <ul>
+                            <li>
+                                <p>주식 스크리너</p>
+                                <p>한 종목의 과거 데이터를 역추적 하는 것을 만들어보고 싶습니다.
+                                    과거의 차트 데이터에서 힌트가 있을 것이다 라고 생각이 들어, 만들어 보고 싶다는 생각을 하였습니다.
+                                </p>
+                            </li>
+                            <li>
+                                <p>자동매매</p>
+                                <p>조건에 따라 자동으로 매수하고 매도하는 기능을 가진 앱을 만들어보고 싶음</p>
+                            </li>
+                        </ul>
+					</section>
+
+
+					<section id="four">
+						<h2>앞으로의 목표</h2>
+						<p>제 서비스로 단순히 차트가 아닌 통찰을 얻을 수 있는 서비스였으면 합니다.</p>
+					</section>
+
+                    				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>Portfolio</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>팀프로젝트 1</h3>
+								<p>게시판 작성</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>팀프로젝트 2</h3>
+								<p>롤 밴픽 시스템</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>팀프로젝트 3</h3>
+								<p>UPDOWN 게임</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
+
 						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
 					</section>
 
 				<!-- Three -->
-					<section id="three">
+					<!-- <section id="three">
 						<h2>Get In Touch</h2>
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
 						<div class="row">
@@ -109,7 +138,7 @@
 								</ul>
 							</div>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Four -->
 				<!--
@@ -435,13 +464,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li><a href="https://github.com/kimyohun" class="icon brands fa-github"><span class="label">Github</span></a></li>					
 					</ul>
 				</div>
 			</footer>
@@ -455,4 +478,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/main.js"></script>
 
 	</body>
-</html>
+</!DOCTYPE>
