--- a/index.html
+++ b/index.html
@@ -1,27 +1,82 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Anonymous Kim</title>
- <link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>김요훈 포트폴리오</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-  <div class="container">
-    <div class="sidebar">
-      <img src="./images/avatar.jpg" alt="profile" />
-      <h2>Anonymous Kim</h2>
+
+  <header>
+    <div class="container">
+      <h1>Anonymous Kim</h1>
+      <p>데이터 기반의 사용자 친화적인 서비스를 꿈꾸는 개발자</p>
     </div>
-    <div class="main">
-      <h1>데이터 분석과 시각화에 관심 있는 주식 개발자 킴입니다.</h1>
-      <p>저는 차트 분석과 매매를 좋아합니다. 차트 분석과 실시간 데이터에 기반한 사용자 친화적인 UI/UX에 관심이 있습니다.</p>
-      
-      <div class="section">
-        <h2>좋아하는 것</h2>
-        <p><strong>고양이</strong></p>
-        <p>회색빛의 고양이를 키우고 있음. 이름은 샤니, 특기는 소파 가운데에서 잠자는 것입니다.</p>
+  </header>
+
+  <main class="container">
+    <section>
+      <h2>소개</h2>
+      <p>
+        안녕하세요. 저는 데이터 분석과 시각화에 관심이 많고,
+        사용자 친화적인 UI/UX를 고민하는 개발자입니다. 실시간 데이터와 인터랙션에 최적화된 서비스를 만들고자 노력합니다.
+      </p>
+    </section>
+
+    <section>
+      <h2>기술 스택</h2>
+      <ul class="tech-list">
+        <li>HTML5 / CSS3</li>
+        <li>JavaScript / React</li>
+        <li>Python / Flask</li>
+        <li>MySQL / SQLite</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>프로젝트</h2>
+
+      <div class="project">
+        <h3>CRUD 게시판</h3>
+        <p>간단한 게시판 기능을 가진 프로젝트로, CRUD 기능을 직접 구현해보았습니다.</p>
+        <a href="https://github.com/kimyohun/crud-board" target="_blank" class="btn">GitHub 링크</a>
       </div>
+
+      <div class="project">
+        <h3>롤 밴픽 시스템</h3>
+        <p>실시간 밴픽 시스템으로, 사용자 간 밴픽 진행을 구현한 인터랙티브 앱입니다.</p>
+        <a href="https://github.com/kimyohun/lol-banpick" target="_blank" class="btn">GitHub 링크</a>
+      </div>
+
+      <div class="project">
+        <h3>UPDOWN 게임</h3>
+        <p>숫자를 추측하는 간단한 게임을 JavaScript로 구현하였습니다.</p>
+        <a href="https://github.com/kimyohun/updown-game" target="_blank" class="btn">GitHub 링크</a>
+      </div>
+    </section>
+
+	<section>
+      <h2>자격증</h2>
+
+      <div>
+        <h3>정보처리기사</h3>
+        <p>최종 합격 | 2024.11</p>
+      </div>
+      
+    </section>
+  </main>
+
+
+  
+
+  <footer>
+    <div class="container footer-content">
+      <a href="https://github.com/kimyohun" target="_blank"><i class="fab fa-github"></i></a>
+      <p>© 2025 김요훈. All rights reserved.</p>
     </div>
-  </div>
+  </footer>
+
 </body>
 </html>
