--- a/index.html
+++ b/index.html
@@ -41,30 +41,37 @@
       <div class="project">
         <h3>CRUD 게시판</h3>
         <p>간단한 게시판 기능을 가진 프로젝트로, CRUD 기능을 직접 구현해보았습니다.</p>
-        <a href="https://github.com/kimyohun/crud-board" target="_blank" class="btn">GitHub 링크</a>
+        <a href="https://github.com/kdt-ful-class-three-group/TEAM2_toy-project-2" target="_blank" class="btn">GitHub 링크</a>
       </div>
 
       <div class="project">
         <h3>롤 밴픽 시스템</h3>
         <p>실시간 밴픽 시스템으로, 사용자 간 밴픽 진행을 구현한 인터랙티브 앱입니다.</p>
-        <a href="https://github.com/kimyohun/lol-banpick" target="_blank" class="btn">GitHub 링크</a>
+        <a href="https://github.com/kdt-ful-class-three-group/KDT-FUL-3_subject-5-exam" target="_blank" class="btn">GitHub 링크</a>
       </div>
 
       <div class="project">
         <h3>UPDOWN 게임</h3>
         <p>숫자를 추측하는 간단한 게임을 JavaScript로 구현하였습니다.</p>
-        <a href="https://github.com/kimyohun/updown-game" target="_blank" class="btn">GitHub 링크</a>
+        <a href="https://github.com/kdt-ful-class-three-group/updown" target="_blank" class="btn">GitHub 링크</a>
       </div>
     </section>
 
 	<section>
       <h2>자격증</h2>
-
       <div>
         <h3>정보처리기사</h3>
         <p>최종 합격 | 2024.11</p>
-      </div>
-      
+      </div>      
+    </section>
+
+	<section>
+      <h2>경력</h2>
+      <div>
+        <h3>(주)에스티씨</h3>
+        <p>2019.03 ~ 2024.09 | 과장</p>
+        <p>DGNSS 위성항법보정시스템 기술지원, 유지보수</p>
+      </div>      
     </section>
   </main>
 
@@ -74,7 +81,7 @@
   <footer>
     <div class="container footer-content">
       <a href="https://github.com/kimyohun" target="_blank"><i class="fab fa-github"></i></a>
-      <p>© 2025 김요훈. All rights reserved.</p>
+      <p>© 2025 Kim. All rights reserved.</p>
     </div>
   </footer>
 
