--- a/index.html
+++ b/index.html
@@ -1,89 +1,145 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>김요훈 포트폴리오</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>김요훈 포트폴리오</title>
+	<link rel="stylesheet" href="style.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
 
-  <header>
-    <div class="container">
-      <h1>Anonymous Kim</h1>
-      <p>데이터 기반의 사용자 친화적인 서비스를 꿈꾸는 개발자</p>
-    </div>
-  </header>
+	<header>
+		<div class="container">
+			<h1>Anonymous Kim</h1>
+			<p>데이터 기반의 사용자 친화적인 서비스를 꿈꾸는 개발자</p>
+		</div>
+	</header>
 
-  <main class="container">
-    <section>
-      <h2>소개</h2>
-      <p>
-        안녕하세요. 저는 데이터 분석과 시각화에 관심이 많고,
-        사용자 친화적인 UI/UX를 고민하는 개발자입니다. 실시간 데이터와 인터랙션에 최적화된 서비스를 만들고자 노력합니다.
-      </p>
-    </section>
+	<main class="container">
+		<section>
+			<h2>소개</h2>
+			<p>
+				안녕하세요. 저는 데이터 분석과 시각화에 관심이 많고,
+				사용자 친화적인 UI/UX를 고민하는 개발자입니다. 실시간 데이터와 인터랙션에 최적화된 서비스를 만들고자 노력합니다.
+			</p>
+		</section>
 
-    <section>
-      <h2>기술 스택</h2>
-      <ul class="tech-list">
-        <li>HTML5 / CSS3</li>
-        <li>JavaScript / React</li>
-        <li>Python / Flask</li>
-        <li>MySQL / SQLite</li>
-      </ul>
-    </section>
+		<section>
+			<h2>기술 스택</h2>
+			<ul class="tech-list">
+				<li>HTML5 / CSS3</li>
+				<li>JavaScript / React</li>
+				<li>Python / Flask</li>
+				<li>MySQL / SQLite</li>
+			</ul>
+		</section>
 
-    <section>
-      <h2>프로젝트</h2>
+		<section>
+			<h2>프로젝트</h2>
 
-      <div class="project">
-        <h3>CRUD 게시판</h3>
-        <p>간단한 게시판 기능을 가진 프로젝트로, CRUD 기능을 직접 구현해보았습니다.</p>
-        <a href="https://github.com/kdt-ful-class-three-group/TEAM2_toy-project-2" target="_blank" class="btn">GitHub 링크</a>
-      </div>
+			<div class="project">
+				<h3>CRUD 게시판</h3>
+				<p>간단한 게시판 기능을 가진 프로젝트로, CRUD 기능을 직접 구현해보았습니다.</p>
+				<a href="https://github.com/kdt-ful-class-three-group/TEAM2_toy-project-2" target="_blank"
+					class="btn">GitHub 링크</a>
+			</div>
 
-      <div class="project">
-        <h3>롤 밴픽 시스템</h3>
-        <p>실시간 밴픽 시스템으로, 사용자 간 밴픽 진행을 구현한 인터랙티브 앱입니다.</p>
-        <a href="https://github.com/kdt-ful-class-three-group/KDT-FUL-3_subject-5-exam" target="_blank" class="btn">GitHub 링크</a>
-      </div>
+			<div class="project">
+				<h3>롤 밴픽 시스템</h3>
+				<p>실시간 밴픽 시스템으로, 사용자 간 밴픽 진행을 구현한 인터랙티브 앱입니다.</p>
+				<a href="https://github.com/kdt-ful-class-three-group/KDT-FUL-3_subject-5-exam" target="_blank"
+					class="btn">GitHub 링크</a>
+			</div>
 
-      <div class="project">
-        <h3>UPDOWN 게임</h3>
-        <p>숫자를 추측하는 간단한 게임을 JavaScript로 구현하였습니다.</p>
-        <a href="https://github.com/kdt-ful-class-three-group/updown" target="_blank" class="btn">GitHub 링크</a>
-      </div>
-    </section>
+			<div class="project">
+				<h3>UPDOWN 게임</h3>
+				<p>숫자를 추측하는 간단한 게임을 JavaScript로 구현하였습니다.</p>
+				<a href="https://github.com/kdt-ful-class-three-group/updown" target="_blank" class="btn">GitHub 링크</a>
+			</div>
+		</section>
 
-	<section>
-      <h2>자격증</h2>
-      <div>
-        <h3>정보처리기사</h3>
-        <p>최종 합격 | 2024.11</p>
-      </div>      
-    </section>
+		<section>
+			<h2>자격증</h2>
+			<div>
+				<h3>정보처리기사</h3>
+				<p>최종 합격 | 2024.11</p>
+			</div>
+		</section>
 
-	<section>
-      <h2>경력</h2>
-      <div>
-        <h3>(주)에스티씨</h3>
-        <p>2019.03 ~ 2024.09 | 과장</p>
-        <p>DGNSS 위성항법보정시스템 기술지원, 유지보수</p>
-      </div>      
-    </section>
-  </main>
+		<section>
+			<h2>경력</h2>
+			<div>
+				<h3>(주)에스티씨</h3>
+				<p>2019.03 ~ 2024.09(5년 7개월) | 과장</p>
+				<h4>담당업무</h4>
+				<p>- RF 송신기 및 송신안테나 장비 유지보수</p>
+				<p>- GNSS 수신기 및 수신안테나 장비 유지보수</p>
+				<p>- 전원 시스템 유지보수(UPS, 분전반)</p>
+				<p>- 서버 장비 유지보수</p>
+				<p>- 네트워크 장비 유지보수</p>
+				<p>- CCTV 유지보수</p>
+				<p>- 정기점검 유지보수</p>
+				<p>- 기술지원 및 컨설팅</p>
+				<p>- 장애업무 처리</p>
+			</div>
+		</section>
+
+		<section>
+			<h2>학위</h2>
+			<div>
+				<h3>계룡공업고등학교</h3>
+				<p>2012.03 ~ 2015.02 | 졸업</p>
+			</div>
+			<div>
+				<h3>독학학위제</h3>
+				<p>2025.03 | 컴퓨터공학 학사 졸업</p>
+			</div>
+		</section>
+
+		<section>
+			<h2>최근 관심사</h2>
+			<h3>주식과 심리 투자간의 상관관계 연구</h3>
+			<p>투자 심리 영향에 따라 실제 주식에서는 어떻게 반응하고 대응해야할 것인지 궁금증을 가지게 되었습니다.</p>
+
+			<h3>데이터의 백테스트</h3>
+			<p>과거의 데이터를 통해서 여러 예측들을 해보는 것에 관심이 있습니다.</p>
+			
+		</section>
+
+		<section>
+			<h2>해보고 싶은 것</h2>
+
+			<h3>주식 스크리너</h3>
+			<p>한 종목의 과거 데이터를 역추적 하는 것을 만들어보고 싶습니다.
+				"과거의 차트 데이터에서 힌트가 있을 것이다" 라고 생각이 들어 만들어 보고 싶다는 생각을 하였습니다.
+			</p>
+
+			<h3>자동매매</h3>
+			<p>매달 기준 5%의 수익을 낼 수 있는 비즈니스 모델을 만들어보고 싶습니다.</p>
+		</section>
 
 
-  
+		<section>
+			<h2>앞으로의 목표</h2>
+			<p>제 서비스로 단순히 차트가 아닌 통찰을 얻을 수 있는 서비스였으면 합니다.</p>
+		</section>
+	</main>
 
-  <footer>
-    <div class="container footer-content">
-      <a href="https://github.com/kimyohun" target="_blank"><i class="fab fa-github"></i></a>
-      <p>© 2025 Kim. All rights reserved.</p>
-    </div>
-  </footer>
+
+
+
+
+
+	<footer>
+		<div class="container footer-content">
+			<a href="https://github.com/kimyohun" target="_blank"><i class="fab fa-github"></i></a>
+			<p>© 2025 Kim. All rights reserved.</p>
+		</div>
+	</footer>
 
 </body>
+
 </html>
