--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>김요훈 포트폴리오</title>
+	<title>KIM 포트폴리오</title>
 	<link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -43,21 +43,21 @@
 			<div class="project">
 				<h3>CRUD 게시판</h3>
 				<p>간단한 게시판 기능을 가진 프로젝트로, CRUD 기능을 직접 구현해보았습니다.</p>
-				<a href="https://github.com/kdt-ful-class-three-group/TEAM2_toy-project-2" target="_blank"
+				<a href="https://github.com/kdt-ful-class-three-group/TEAM2_toy-project-2" rel="noopener" target="_blank"
 					class="btn">GitHub 링크</a>
 			</div>
 
 			<div class="project">
 				<h3>롤 밴픽 시스템</h3>
 				<p>실시간 밴픽 시스템으로, 사용자 간 밴픽 진행을 구현한 인터랙티브 앱입니다.</p>
-				<a href="https://github.com/kdt-ful-class-three-group/KDT-FUL-3_subject-5-exam" target="_blank"
+				<a href="https://github.com/kdt-ful-class-three-group/KDT-FUL-3_subject-5-exam" rel="noopener" target="_blank"
 					class="btn">GitHub 링크</a>
 			</div>
 
 			<div class="project">
 				<h3>UPDOWN 게임</h3>
 				<p>숫자를 추측하는 간단한 게임을 JavaScript로 구현하였습니다.</p>
-				<a href="https://github.com/kdt-ful-class-three-group/updown" target="_blank" class="btn">GitHub 링크</a>
+				<a href="https://github.com/kdt-ful-class-three-group/updown" rel="noopener" target="_blank" class="btn">GitHub 링크</a>
 			</div>
 		</section>
 
@@ -65,7 +65,7 @@
 			<h2>자격증</h2>
 			<div>
 				<h3>정보처리기사</h3>
-				<p>최종 합격 | 2024.11</p>
+				<p>최종 합격 | 2023.11</p>
 			</div>
 		</section>
 
@@ -88,14 +88,16 @@
 		</section>
 
 		<section>
-			<h2>학위</h2>
-			<div>
-				<h3>계룡공업고등학교</h3>
-				<p>2012.03 ~ 2015.02 | 졸업</p>
-			</div>
+			<h2>교육</h2>
+
 			<div>
 				<h3>독학학위제</h3>
 				<p>2025.03 | 컴퓨터공학 학사 졸업</p>
+			</div>
+
+			<div>
+				<h3>계룡공업고등학교</h3>
+				<p>2012.03 ~ 2015.02 | 졸업</p>
 			</div>
 		</section>
 
@@ -106,7 +108,7 @@
 
 			<h3>데이터의 백테스트</h3>
 			<p>과거의 데이터를 통해서 여러 예측들을 해보는 것에 관심이 있습니다.</p>
-			
+
 		</section>
 
 		<section>
@@ -118,7 +120,7 @@
 			</p>
 
 			<h3>자동매매</h3>
-			<p>매달 기준 5%의 수익을 낼 수 있는 비즈니스 모델을 만들어보고 싶습니다.</p>
+			<p>매달 수익을 낼 수 있는 비즈니스 모델을 만들어보고 싶습니다.</p>
 		</section>
 
 
@@ -128,14 +130,9 @@
 		</section>
 	</main>
 
-
-
-
-
-
 	<footer>
 		<div class="container footer-content">
-			<a href="https://github.com/kimyohun" target="_blank"><i class="fab fa-github"></i></a>
+			<a href="https://github.com/kimyohun" rel="noopener" aria-label="github" target="_blank"><i class="fab fa-github"></i></a>
 			<p>© 2025 Kim. All rights reserved.</p>
 		</div>
 	</footer>
